...
                    navController?.navigate(Screen.AddEditNoteScreen.route)
                }
            )
            {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add a note"
                )
            }
        },
        snackbarHost = {
            SnackbarHost(hostState = snackBarHostState)
        }
...
                    onClick = {
                        viewModel.onEvent(NotesEvents.ToggleOrderSection)
                    }
                ) {
                    Icon(
                        imageVector = Icons.Default.Sort,
                        contentDescription = "Sorting"
                    )
                }
            }

            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
...
